--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
       url: "https://github.com/Horoli/horoli_package.git"
       ref: "master"
   http: ^1.2.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
