--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
       ref: "master"
   http: ^1.2.1
   get: ^4.6.6
+  device_info_plus: ^10.0.1
 
 dev_dependencies:
   flutter_test:
