--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   url_launcher: ^6.2.5
   shared_preferences: ^2.2.2
   uuid: ^4.3.3
+  simple_icons: ^10.1.3
 
 dev_dependencies:
   flutter_test:
