--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: third_party_archive
-description: "A new Flutter project."
+description: "PathOfExile third party archive"
 publish_to: "none"
 
 version: 1.0.0+1
