--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.2
   uuid: ^4.3.3
   simple_icons: ^10.1.3
+  timezone: ^0.9.3
 
 dev_dependencies:
   flutter_test:
