--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     git:
       url: "https://github.com/Horoli/horoli_package.git"
       ref: "master"
+  flutter_fortune_wheel: ^1.3.1
   http: ^1.2.1
   get: ^4.6.6
   device_info_plus: ^10.0.1
